ライン@の設定の確認

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>aaaaaa</h1>
+  <div class="line-it-button" data-lang="ja" data-type="friend" data-lineid="@lineteamjp" data-count="true" data-home="true" style="display: none;"></div>
+  <script src="https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js" async="async" defer="defer"></script>
 </body>
 </html>
