ポートフォリオ内容の変更

--- a/profile.html
+++ b/profile.html
@@ -6,14 +6,16 @@
 
 
 
-  <!--style.css-->
-  <link href="style.css" rel="stylesheet">
 
   <!--less.css-->
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
 
   <!--レスポンシブ-->
   <meta name="viewport" content="width=device-widht, initial-scale=1">
+	
+	  <!--style.css-->
+  <link href="css/style.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -81,7 +83,7 @@
   <footer>
 
 
-    <div class="flex sitano1">
+    <div class="flex sitano1 cp">
       <div class="sitano flex">
         <nav id="footernav">
           <ul class="gmenu">
