--- a/gallery.html
+++ b/gallery.html
@@ -5,15 +5,15 @@
     <title>OMI's Portfolio | 作品集</title>
 
 
-
-    <!--style.css-->
-    <link href="style.css" rel="stylesheet">
-
     <!--less.css-->
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
 
     <!--レスポンシブ-->
     <meta name="viewport" content="width=device-widht, initial-scale=1">
+	  
+	    <!--style.css-->
+  <link href="css/style.css" rel="stylesheet">
+
   </head>
 
   <body>
