--- a/gallery.html
+++ b/gallery.html
@@ -205,10 +205,10 @@
 	  
   </footer>
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-4.2.1.js"></script>
-	
+	<!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>-->
 <script src="sp.js"></script>
 </body>
 </html>
