--- a/bese.html
+++ b/bese.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>OMI's Portfolio | 自己紹介</title>
-
+  <link rel="icon" href="favicon.ico" type="image/vnd.favicon.icon">
 
   <!--less.css-->
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
