--- a/gallery.html
+++ b/gallery.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <title>OMI's Portfolio | 作品集</title>
 
-	
+  <link rel="icon" href="favicon.ico" type="image/vnd.favicon.icon">
 	<link rel="stylesheet" href="css/bootstrap-4.2.1.css">
-
-  <!--less.css-->
-  <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
   <link rel="stylesheet" href="slick/slick.css">
+  <!--ress.css-->
+  <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+
   
   <!--レスポンシブ-->
   <meta name="viewport" content="width=device-widht, initial-scale=1">
@@ -92,17 +92,44 @@
       <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
       <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
+      <li data-target="#carouselExampleIndicators1" data-slide-to="3"></li>
+      <li data-target="#carouselExampleIndicators1" data-slide-to="4"></li>
+      <li data-target="#carouselExampleIndicators1" data-slide-to="5"></li>
+      <li data-target="#carouselExampleIndicators1" data-slide-to="6"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
-      <div class="carousel-item active"> <img class="d-block mx-auto" src="img/kaizoudokegeta5.png" alt="#">
+      <div class="carousel-item active"> <div class="inner_gallery flex "><img class="d-block mx-auto" src="img/profilepng.png" alt="#">
+        <p class="pc">始めて作った自己紹介ページです。<br>韓国語/中国語に切り替えれるようにしました。<br><a href="#">詳しくみる</a></p>
+          </div>
         <div class="carousel-caption"> </div>
       </div>
-      <div class="carousel-item"> <img class="d-block mx-auto" src="img/kaizoudosagetajs.png" alt="#">
+
+      <div class="carousel-item"> <div class="inner_gallery flex"><img class="d-block mx-auto" src="img/aquarium.png" alt="#">
+        <p class="pc">訓練校のテストで作ったサイトです。<br><a href="#">詳しくみる</a>
+        </p></div>
         <div class="carousel-caption"> </div>
       </div>
-      <div class="carousel-item"> <img class="d-block mx-auto" src="img/kaidoudosageta3.png" alt="#">
+
+      <div class="carousel-item"> <div class="inner_gallery flex"><img class="d-block mx-auto" src="img/ryokou.png" alt="#">
+      <p class="pc">旅行サイトを作りました。<br><a href="#">詳しくみる</a></p></div>
         <div class="carousel-caption"> </div>
       </div>
+
+      <div class="carousel-item"> <div class="inner_gallery flex"><img class="d-block mx-auto" src="img/dark.png" alt="#">
+      <p class="pc">旅行サイトをダークモード適用させました。<br><a href="#">詳しくみる</a></p></div>
+        <div class="carousel-caption"> </div>
+      </div>
+
+      <div class="carousel-item"> <div class="inner_gallery flex"><img class="d-block mx-auto" src="img/kaidoudosageta3.png" alt="#">
+        <p class="pc"></p></div>
+        <div class="carousel-caption"> </div>
+      </div>
+
+      <div class="carousel-item"> <div class="inner_gallery flex"><img class="d-block mx-auto" src="img/kaidoudosageta3.png" alt="#">
+        <p class="pc"></p></div>
+        <div class="carousel-caption"> </div>
+      </div>
+
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a> </div>
 				 
