カラーとfontをscssで編集、その他ページ追加

--- a/bese.html
+++ b/bese.html
@@ -68,7 +68,7 @@
 	  
     <article class="pc_article">
       <div class="bar flex pc">
-        <h2>OMI's Portfolio</h2>
+        <h2 class="bar_txt">OMI's Portfolio</h2>
         <a href="javascript:history.back()"><img src="img/batu.png" alt="前のページに戻る"></a>
       </div>
 		
@@ -108,29 +108,28 @@
       <div class="sitano flex">
         <nav id="footernav">
           <ul class="gmenu">
-            <li><a href="#" class="hiraku"><img class="start" src="img/start.png" alt="スタート、メニューバーが開きます"></a>
+            <li><a href="index.html" class="hiraku"><img class="start" src="img/start.png" alt="スタート、メニューバーが開きます"></a>
               <div>
                 <ul class="oomaka">
-                  <li><a href="index.html">MY プロフィール</a></li>
+                  <li><a href="profile.html">MY プロフィール</a></li>
 
-                  <li class="komenu"><a href="#">スキル</a>
+                  <li class="komenu"><a href="skill.html">スキル</a>
                     <div>
                       <ul class="kuwasiku">
-                        <li><a href="#">コーディング</a></li>
-                        
-                        <li><a href="#">アプリケーション</a></li>
+                        <li><a href="skill.html#code">コーディング</a></li>
+                        <li><a href="skill.html#application">アプリケーション</a></li>
                       </ul>
                     </div>
                   </li>
-                  <li class="komenu"><a href="#">作品集</a>
+                  <li class="komenu"><a href="gallery.html">作品集</a>
                     <div>
                       <ul class="kuwasiku">
-                        <li><a href="#">ホームページ</a></li>
-                        <li><a href="#">作成素材・加工</a></li>
+                        <li><a href="gallery.html#homepage">ホームページ</a></li>
+                        <li><a href="gallery.html#app">作成素材・加工</a></li>
                       </ul>
                     </div>
                   </li>
-                  <li><a href="#">コンタクト</a></li>
+                  <li><a href=contact.html>コンタクト</a></li>
                 </ul>
                 <!--大まかなul-->
               </div>
@@ -139,13 +138,13 @@
         </nav>
 
         <div class="flex iconbaitai">
-          <a href="#"><img src="img/kaizoudokegeta5.png" alt="アイコン"></a>
-          <a href="#"><img src="img/kaidoudosageta3.png" alt="アイコン"></a>
-          <a href="#"><img src="img/kaizoudosagetajs.png" alt="アイコン"></a>
-          <a href="#"><img src="img/kaizoudootositaAi.png" alt="アイコン"></a>
-          <a href="#"><img src="img/kaizoudootositaPs.png" alt="アイコン"></a>
-          <a href="#"><img src="img/kaizoudootositaXd.png" alt="アイコン"></a>
-          <a href="#"><img src="img/kaizoudootositaDw.png" alt="アイコン"></a>
+          <a href="#"><img src="img/html.png" alt="アイコン"></a>
+          <a href="#"><img src="img/css.png" alt="アイコン"></a>
+          <a href="#"><img src="img/js.png" alt="アイコン"></a>
+          <a href="#"><img src="img/ai.png" alt="アイコン"></a>
+          <a href="#"><img src="img/ps.png" alt="アイコン"></a>
+          <a href="#"><img src="img/dw.png" alt="アイコン"></a>
+          <a href="#"><img src="img/xd.png" alt="アイコン"></a>
         </div>
       </div>
       <small>copyright©2020 omi portfolio</small>
