--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>OMI's Portfolio</title>
+  <title>OMI's Portfolio | お問合わせ</title>
   <link rel="icon" href="favicon.ico" type="image/vnd.favicon.icon">
 
   <!--less.css-->
@@ -13,6 +13,7 @@
 
   <!--style.css-->
   <link href="css/style.css" rel="stylesheet">
+  <script src="https://ajaxzip3.github.io/ajaxzip3.js" charset="UTF-8"></script>
 </head>
 
 <body id="top_body">
@@ -52,7 +53,7 @@
 		  <div class="flex jc">
 			<div class="sp_header_set"><img src="imgsp/denpa0.png" alt="電波のアイコン">
 		  <img src="imgsp/i.png" alt="iのアイコン">
-		  <h1>omi's portfolio</h1></div>
+		  <h1>omi's contact</h1></div>
 		  <img src="imgsp/denti.png" alt="電池のアイコン"></div>
 		  
 		  
@@ -68,21 +69,62 @@
 	  
     <article class="pc_article">
       <div class="bar flex pc">
-        <h2 class="bar_txt">OMI's Portfolio</h2>
+        <h2 class="command_head"><img src="img/command.png" alt="コマンドプロンプト風">C:_￥omi's￥portfolio￥contact.exe</h2>
         <a href="javascript:history.back()"><img src="img/batu.png" alt="前のページに戻る"></a>
       </div>
 		
 		
-      <div class="nakami">
+      <div class="nakami command">
         <section id="spImgMenu">
-          <h3 class="nakami_header">ポートフォリオ</h3>
           <div class="nakami_section">
-          <p>御覧頂きありがとうございます。<br>
-            このページはタイピングしか出来なかった私が半年間<br>
-            職業訓練校に通い身に着けたスキルをまとめたポートフォリオサイトです。<br>
-          </p>
-          <p class="pc">左のアイコン、もしくは下のスタートボタンからページが開けます。</p>
-          <p class="sp">メニューボタンを押すとメニューに切り替わります。</p>
+            <div id="formWrap">
+              <form method="post" action="mail.php">
+                <table class="formTable">
+                  <p>お問合わせ</p>
+                  <tr>
+                  <tr>
+                    <th>お名前<span>必須</span></th>
+                    <td><input type="text" name="name" required></td>
+                  </tr>
+                  <tr>
+                    <th>ふりがな<span>必須</span></th>
+                    <td><input type="text" name="name" required></td>
+                  </tr>
+                  <tr>
+                    <th>住所</th>
+                    <td>
+                      <div class="flex"><label>〒　</label><input type="text" name="zip21" size="4" maxlength="3"> － <input type="text" name="zip22"
+                        size="5" maxlength="4" onKeyUp="AjaxZip3.zip2addr('zip21','zip22','pref21','addr21','strt21');"></div><br>
+                      <div class="form-text"><label>・都道府県　<br></label>
+                      <input type="text" name="pref21"></div><br>
+                      <div class="form-text"><label>・市区町村　<br></label>
+                      <input type="text" name="addr21"></div><br>
+                      <div class="form-text"><label>・町名番地　<br></label>
+                      <input type="text" name="strt21"></div><br>
+                      <div class="form-text"><label>・建物名等　<br></label>
+                      <input type="text" name="strt21"></div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>メールアドレス<span>必須</span></th>
+                    <td><input type="email" name="Email" required><br><br>
+                      <input type="email" name="Email" required> 確認用</td>
+                  </tr>
+                  <tr>
+                    <th>連絡先電話番号<span></span></th>
+                    <td><input type="tel" name="tel"><br>
+                    </td>
+                  </tr>
+                    <th>お問い合わせ内容<span>必須</span><br></th>
+                    <td><textarea name="お問い合わせ内容" required></textarea></td>
+                  </tr>
+                </table>
+                <p>
+                  <input type="submit" value="　 確認 　">　<input type="reset" value="リセット">
+                </p>
+              </form>
+              <p>※IPアドレスを記録しております。いたずらや嫌がらせ等はご遠慮ください</p>
+            </div>
           </div>
           </section>
       </div>
@@ -152,9 +194,7 @@
       </div>
       <small>copyright©2020 omi portfolio</small>
     </div>
-	  
-	  
-	  
+
 	  <div class="sp fixed">
 		  <div class="sp_footer">
 	  	<img class="img_sentaku" src="imgsp/sentaku.png" alt="選択">
